Docs (#14)
* Removing some sonar issues

* Removing some sonar issues

* google style format for java intelli-j